# HandsOnWebProtocols

./: .gitignore  README.md  pyproject.toml  start_servers.sh
data/: schema.sql  seed_db.py
protos/: logs.proto
src/benchmarks/: advanced_benchmark.py  benchmark.py  engine.py
src/client/: interactive_demo.py  ws_client.py
src/core/: database.py  models.py
src/dashboard/: app.py
src/scripts/: generate.py  seed_db.py
src/servers/: gql.py  graphql_server.py  grpc_impl.py  grpc_server.py  manager.py  rest.py  rest_server.py  sse.py  sse_server.py  ws.py  ws_server.py
tests/: test_endpoints.py
